# HumanDataProject

./: .gitignore  EDA.ipynb  EEG_Preprocess.ipynb  Pipeline_EEG.ipynb  README.md  colab_config.yaml  config.yaml  pyproject.toml  saved_model.index  wandb.ipynb
hda/: base_model.py  config.py  constants.py  demo.py  eda.py  main_backup.py  preprocessor.py  test_load_model.py  utils.py
hda/models/: base_model.py  model.py  model_2.py
report/img/: ArchitectureOverview.drawio
