[tool.poetry]
name = "hda"
version = "0.1.0"
description = "Project A4 for the Human Data Analytics course, UniPd."
authors = ["Alfredo Leon, Satria Bagus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
tensorflow = "^2.14.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
altair = "^5.2.0"
mne = "^1.6.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
