[tool.poetry]
name = "hda"
version = "0.1.0"
description = "Project A4 for the Human Data Analytics course, UniPd."
authors = ["Alfredo Leon, Satria Bagus"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
altair = "^5.2.0"
mne = "^1.6.0"
jax = "^0.4.23"
jaxlib = "^0.4.23"
wandb = "^0.16.2"
jupyterlab = "^4.0.11"
#tensorflow-io = "0.34.0"
#tensorflow-macos = "^2.15.0"
pylint = "^3.0.3"
black = "^24.1.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
